<resources>
    <string name="app_name">RecoMate</string>
    <string name="add_recommendation">Add Recommendation</string>
    <string name="item_name">Item name</string>
    <string name="price">Price</string>
    <string name="link">Link</string>
    <string name="rate">Rate</string>
    <string name="comments">Comments</string>
    <string name="star_1">Star 1</string>
    <string name="star_2">Star 2</string>
    <string name="star_3">Star 3</string>
    <string name="star_4">Star 4</string>
    <string name="star_5">Star 5</string>
    <string name="_0_00" translatable="false">0.00</string>
    <string name="enter_item_title">Enter item Title</string>
    <string name="enter_link_of_item">Enter Link of item</string>
    <string name="pick_image">Pick Image</string>
    <string name="sport">Sport</string>
    <string name="tech">Tech</string>
    <string name="home">Home</string>
    <string name="game">Games</string>
    <string name="food">Food</string>
    <string name="fashion">Fashion</string>
    <string name="category">Category</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="Post">Post</string>
    <string name="item_title" translatable="false">Item Title</string>
    <string name="price_0_00" translatable="false">Price: 0.00</string>
    <string name="item_comment" translatable="false">Item Comment</string>
    <string name="take_photo">Take a Photo</string>
    <string name="choose_from_device">Choose from Device</string>
    <string name="select_option">Select an Option</string>
    <string name="fab_description">Add a new item</string>
    <string name="remove_filter">Remove Filter</string>
    <string name="finish">Finish</string>
    <string name="filter_options">Filter Options</string>
    <string name="my_recommendations">My Recommendations</string>
    <string name="filter">Filter</string>
    <string name="categories">Categories</string>
    <string name="travel">Travel</string>
    <string name="book">Books</string>
    <string name="health">Health</string>
    <string name="movie">Movies</string>
    <string name="music">Music</string>
    <string name="shops">Shops</string>
    <string name="price_range">Price Range</string>
    <string name="minimum_rating">Minimum Rating</string>
    <string name="apply">Apply</string>
    <string name="_1000" translatable="false">$1000</string>
    <string name="_0" translatable="false">$0</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="all_delete_confirmation_message">Are you sure you want to delete all items?</string>
    <string name="all_items_deleted">All items deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this item?</string>
    <string name="Filters_removed">Filters removed. Showing all items.</string>
    <string name="items_found">items found</string>
    <string name="title">title</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="recommendation_published">Recommendation published successfully!</string>
    <string name="no_comment">No Comment</string>
    <string name="no_link">No Link</string>
    <string name="no_category">No Category</string>
    <string name="item">item</string>
    <string name="item_updated_successfully">Item updated successfully!</string>
    <string name="separator" translatable="false">", "</string>
    <string name="comment">comment</string>
    <string name="photo">Photo</string>
    <string name="rating">rating</string>
    <string name="no_price">No Price</string>
    <string name="update_recommendation">Update recommendation</string>
    <string name="remove">Remove</string>
    <string name="change">Change</string>
    <string name="no_title">No Title</string>
    <string name="main_item_title">Main item title</string>
    <string name="Lets_Recommend">Lets Recommend!</string>
    <string name="you_can_select_up_to_3_categories">You can select up to 3 categories</string>
    <string name="error_fetching_items">error_fetching_items</string>
    <string name="category_chosen">Category chosen: %1$s</string>
    <string name="beauty">Beauty</string>
    <string name="enter_adress">Enter Address</string>
    <string name="sort_options">Sort Options</string>
    <string name="item_deleted_successfully">item deleted successfully</string>
    <string name="categories_layout_categories_text">CATEGORIES</string>
    <string name="categories_layout_all_text">ALL</string>
    <string name="all_rec_layout_all_recommendations_text">All Recommendations</string>
    <string name="fav_rec_layout_my_favorites_text">My Favorites</string>
    <string name="update_rec_layout_update_button">Update</string>
    <string name="login_successful">Login successful</string>
    <string name="long_click_for_details">Long click for details</string>
    <string name="no_address">No address</string>
    <string name="no_address_to_check">No address to check</string>
    <string name="navigation_error_unknown_source_fragment">Navigation Error: Unknown Source Fragment</string>
    <string name="are_you_sure_you_want_to_delete_this_recommendation">Are you sure you want to delete this recommendation?</string>
    <string name="address_optional">Address (Optional)</string>
    <string name="top_items">TOP ITEMS 🔥</string>
    <string name="sort_by_price_low_to_high">Sort by Price: Low to High</string>
    <string name="sort_by_price_high_to_low">Sort by Price: High to Low</string>
    <string name="sort_by_stars_high_to_low">Sort by Stars: High to Low</string>
    <string name="post">post</string>
    <string name="items_image" translatable="false">items image</string>
    <string name="location_icon" translatable="false">location icon</string>
    <string name="location">Location</string>
    <string name="show_adress">Show address</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="full_size_image" translatable="false">Full size image</string>
    <string name="close">close</string>
    <string name="username">Username</string>
    <string name="profile_picture">profile picture</string>
    <string name="like_button" translatable="false">like button</string>
    <string name="log_into_your_account">Log Into Your Account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_acount_yet_click_to_register">Don\'t have an acount yet, click to register</string>
    <string name="let_s_recommend">Let\'s Recommend!</string>
    <string name="create_an_account">Create an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_address">Edit address</string>
    <string name="no_image_to_show">No image to show</string>
    <string name="only_3_categories_are_allowed">Only 3 categories are allowed</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="registration_successful">Registration successful</string>
    <string name="error_occurred">Error occurred</string>
    <string name="recommendation_deleted">Recommendation deleted!</string>
    <string name="like_status_updated">Like status updated!</string>
    <string name="minimum_rating_set">Minimum rating set: %1$s ⭐</string>
    <string name="sort_selected">Sort selected: %s</string>
    <string name="error_user_not_logged_in">Error: User not logged in!</string>
    <string name="uploading">uploading</string>
    <string name="updating">updating</string>
    <string name="error_loading_map">Error loading map</string>
    <string name="error_updating_list">Error updating list: %1$s</string>
    <string name="failed_to_delete_item">Failed to delete item: %1$s</string>
    <string name="error_loading_items">Error loading items: %1$s</string>
    <string name="failed_to_add_item">Failed to add item: %1$s</string>
    <string name="firestore_error" translatable="false">Firestore error: %1$s</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="user_not_logged_in">User not logged in.</string>
    <string name="failed_to_load_image">Failed to load image: %1$s</string>
    <string name="error_updating_item">Error updating item: %1$s</string>
    <string name="failed_to_like_item">Failed to like item: %1$s</string>
    <string name="failed_to_unlike_item">Failed to unlike item: %1$s</string>
    <string name="hello">Hello, %1$s!</string>
    <string name="no_favorites_found">No favorites found!</string>
    <string name="favorite_items_found">%1$s favorite items found!</string>


</resources>