<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue"
    tools:context=".ui.all_recommendation.AllItemsFragment"
   >


    <!-- התוכן הראשי -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <!-- כותרת -->
        <TextView
            android:id="@+id/title"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_rec_layout_all_recommendations_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" />
        <Button
            android:id="@+id/top_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/top_items"
            android:backgroundTint="@color/gray"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toStartOf="@id/action_delete"/>
        <ImageView
            android:id="@+id/action_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_delete_24"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reset_filter_button"
             />

        <!-- כפתור סינון -->
        <ImageView
            android:id="@+id/filter_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_filter_list_24"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/filter" />

        <Button
            android:id="@+id/reset_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/remove_filter"
            android:backgroundTint="@color/gray"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toStartOf="@id/filter_button"
            android:textColor="@color/black" />


        <!-- רשימה -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_button"
            app:layout_constraintVertical_bias="0.0" />
        <!-- ProgressBar לטעינה -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/filter_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- הודעת שגיאה במקרה של תקלה -->
        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_fetching_items"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <!--        &lt;!&ndash; כפתור פעולה &ndash;&gt;-->
<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/fab"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:backgroundTint="@color/gray"-->
<!--            android:src="@drawable/baseline_add_24"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->



    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- חלון הצד לסינון -->
    <LinearLayout
        android:id="@+id/order_by_menu"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/filter_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_options"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="16dp" />

                <!-- מיון -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_options"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <Button
                    android:id="@+id/sort_price_asc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_price_low_to_high"
                    android:layout_marginVertical="6dp"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <Button
                    android:id="@+id/sort_price_desc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_price_high_to_low"
                    android:layout_marginVertical="6dp"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <Button
                    android:id="@+id/sort_stars_desc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_stars_high_to_low"
                    android:layout_marginVertical="6dp"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>


                <!-- מחיר -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/min_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1000"
                        android:textSize="16sp"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/max_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1000"
                        android:textSize="16sp"
                        android:layout_alignParentEnd="true" />

                    <SeekBar
                        android:id="@+id/priceSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="1000"
                        android:progress="1000"
                        android:layout_marginTop="16dp"/>
                </RelativeLayout>

                <!-- כוכבים -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minimum_rating"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/star1_filter"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/star_empty"
                        android:contentDescription="@string/star_1"
                        android:clickable="true"
                        android:focusable="true"/>

                    <ImageView
                        android:id="@+id/star2_filter"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/star_empty"
                        android:contentDescription="@string/star_2"
                        android:clickable="true"
                        android:focusable="true"/>

                    <ImageView
                        android:id="@+id/star3_filter"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/star_empty"
                        android:contentDescription="@string/star_3"
                        android:clickable="true"
                        android:focusable="true"/>

                    <ImageView
                        android:id="@+id/star4_filter"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/star_empty"
                        android:contentDescription="@string/star_4"
                        android:clickable="true"
                        android:focusable="true"/>

                    <ImageView
                        android:id="@+id/star5_filter"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/star_empty"
                        android:contentDescription="@string/star_5"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

                <!-- כפתור Apply -->
                <Button
                    android:id="@+id/apply_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
