<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/blue"
    tools:context=".ui.categories.SpecificCategoryItemsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/category_background"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/categoryImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_placeholder"/>

            <TextView
                android:id="@+id/categoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>


        <Button
            android:id="@+id/top_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_items"
            android:backgroundTint="@color/gray"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reset_filter_button"/>


        <ImageView
            android:id="@+id/filter_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_filter_list_24"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titles"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/reset_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_filter"
            android:backgroundTint="@color/gray"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titles"
            app:layout_constraintEnd_toStartOf="@id/filter_button"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/reset_filter_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="vertical"/>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/filter_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_fetching_items"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/order_by_menu"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/filter_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_options"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"/>


                <Button
                    android:id="@+id/sort_price_asc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_price_low_to_high"
                    android:layout_marginVertical="6dp"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <Button
                    android:id="@+id/sort_price_desc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_price_high_to_low"
                    android:layout_marginVertical="6dp"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <Button
                    android:id="@+id/sort_stars_desc_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by_stars_high_to_low"
                    android:layout_marginVertical="6dp"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/minPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1000"
                        android:textSize="16sp"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:id="@+id/maxPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1000"
                        android:textSize="16sp"
                        android:layout_alignParentEnd="true"/>

                    <SeekBar
                        android:id="@+id/priceSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="1000"
                        android:progress="1000"
                        android:layout_marginTop="16dp"/>
                </RelativeLayout>


                <Button
                    android:id="@+id/apply_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:backgroundTint="@color/gray"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
